[package]
name = "check-links"
version = "0.2.0"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Cargo extension for verifying links in documentation"
readme = "README.md"
homepage = "https://github.com/epwalsh/check-links"
repository = "https://github.com/epwalsh/check-links"
keywords = ["cli", "ci"]
categories = ["command-line-utilities"]

[[bin]]
name = "check-links"
path = "src/main.rs"

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
colored = "1.8.0"
isahc = "0.8.2"
tokio = { version = "0.2", features = ["full"] }
ignore = "0.4.10"
globset = "0.4.4"
grep-matcher = "0.1.3"
grep-regex = "0.1.5"
grep-searcher = "0.1.6"
structopt = "0.2.18"
failure = "0.1.5"
exitfailure = "0.5.1"

[dev-dependencies]
assert_cmd = "0.10"
